BPER/DEVF/force-app/main/default/objects/SV_FailedRequest__c/SV_FailedRequest__c.object-meta.xml
<CustomObject>
    <label>Failed Request</label>
    <nameField>
        <displayFormat>FR_{0000000}</displayFormat>
        <label>Failed Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Failed Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>