BPER/DEVF/force-app/main/default/objects/SV_FailedRequest__c/fields/CertificationName__c.field-meta.xml
<CustomField>
    <fullName>CertificationName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Certification Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>