BPER/DEVF/force-app/main/default/objects/SV_FailedRequest__c/fields/FieldsMap__c.field-meta.xml
<CustomField>
    <fullName>FieldsMap__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FieldsMap</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>