BPER/DEVF/force-app/main/default/objects/SV_FailedRequest__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>